--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "jquery": "~2.1.0",
     "leaflet": "0.7.5",
-    "n3": "^0.4.5"
+    "n3": "^0.4.5",
+    "wkx": "^0.2.0"
   },
   "devDependencies": {
     "browserify": "^11.2.0",
